# quantizr

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml  configure  lefthook.yml
.github/workflows/: ci.yml  release.yml
assets/: control.in  libimagequant.h  quantizr.h  quantizr.pc.in
example/: Cargo.toml
example/src/: main.rs
src/: c_api.rs  capi.rs  cluster.rs  color.rs  colormap.rs  error.rs  histogram.rs  image.rs  lib.rs  liq_compat.rs  options.rs  ord_float.rs  palette.rs  quantize.rs  vpsearch.rs
