[package]
name = "quantizr"
version = "1.1.0"
authors = ["DarthSim <darthsim@gmail.com>"]
edition = "2018"

[lib]
name = "quantizr"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[features]
"capi" = []

[dependencies]
vpsearch = "2.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
