[package]
name = "quantizr"
description = "Fast library for converting RGBA images to 8-bit palette images"
version = "1.3.0"
authors = ["DarthSim <darthsim@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[lib]
name = "quantizr"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[features]
"capi" = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
