[package]
name = "quantizr_demo"
version = "0.0.1"
authors = ["DarthSim <darthsim@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"

[dependencies.quantizr]
path = ".."

[dependencies]
png = "0.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
